Updated README.md, added new optimized images.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
     <!-- Put this in README.md, but it looked like the web font took the longest response time.  -->
     <!-- It was the first request, and the last item received in the timeline: about 85ms.-->
-    <!-- Commenting out the link to the Google Font so I can load asynchonously -->
+    <!-- Commenting out the link to the Google Font so I can load asynchronously -->
     <!-- <link href="//fonts.googleapis.com/css?family=Open+Sans:400" rel="stylesheet"> -->
 
     <script>
